# TopoPool

./: .gitignore  .sourcery.yaml  README.md  pyproject.toml
Chemical Compound Dataset/models/: witness_graphcnn.py
Molecular Dataset/: PTCacc_results.txt  revised_main.py  revised_util.py  wit_topopool_main_molecular_dataset.py
Molecular Dataset/models/: log_setup.py  witness_graphcnn.py
Social Dataset/models/: witness_graphcnn.py
TDC submission/250207/: tdc_submission_ames.json  tdc_submission_bbb_martins.json  tdc_submission_bioavailability_ma.json  tdc_submission_caco2_wang.json  tdc_submission_clearance_hepatocyte_az.json  tdc_submission_clearance_microsome_az.json  tdc_submission_cyp2c9_substrate_carbonmangels.json  tdc_submission_cyp2c9_veith.json  tdc_submission_cyp2d6_substrate_carbonmangels.json  tdc_submission_cyp2d6_veith.json  tdc_submission_cyp3a4_substrate_carbonmangels.json  tdc_submission_cyp3a4_veith.json  tdc_submission_dili.json  tdc_submission_half_life_obach.json  tdc_submission_herg.json  tdc_submission_hia_hou.json  tdc_submission_ld50_zhu.json  tdc_submission_lipophilicity_astrazeneca.json  tdc_submission_pgp_broccatelli.json  tdc_submission_ppbr_az.json  tdc_submission_solubility_aqsoldb.json  tdc_submission_vdss_lombardo.json
config/: sweep_config copy.yaml  sweep_config.yaml  train_config.yaml
src/: config_loader.py  main_TDC_benchmark.py  revised_main.py  revised_util.py  util.py  wandb_sweep.py
src/TDA/: tda.py
src/models/: gnn_realization.py  mlp.py  witness_graphcnn.py  witness_graphcnn_GCNConv.py  witness_graphcnn_GINConv.py
(+3 files in other folders)
