[project]
name = "clone-topologicalpooling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
    "dionysus>=2.0.10",
    "gudhi>=3.10.1",
    "networkx>=3.4.2",
    "numpy==1.26.4",
    "pandas>=2.2.3",
    "persim>=0.3.7",
    "pytdc>=0.4.1",
    "rdkit>=2024.9.4",
    "scipy>=1.15.1",
    "torch==2.1",
    "torch-geometric==2.3.1",
    "wandb>=0.19.3",
]

[tool.uv]
package = true
